Push Updates for Monthly Blast

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,7 @@
 ---
 subject: Ed Rinke Performance
 ---
-<p style="display: none;">Purchase a crate engine for your project car today!</p>
+<p style="display: none;">Don't Miss These Specials From Ed Rinke Performance!</p>
 <container>
   <!-- <row>
     <columns small="12" large="12" class="img-wrap">
@@ -15,7 +15,7 @@ subject: Ed Rinke Performance
   <row>
     <columns small="12" large="6">
       <spacer size="5"></spacer>
-      <p class="headline text-left"></p>
+      <p class="headline text-left">Visit Ed Rinke Performance Today</p>
     </columns>
     <columns small="12" large="6">
       <spacer size="5"></spacer>
@@ -23,34 +23,48 @@ subject: Ed Rinke Performance
     </columns>
   </row>
   <row>
-  <columns small="12" large="12" class="img-wrap">
-    <a href="http://blog.edrinkeperformance.com/ed-rinke-performance-the-official-chevrolet-performance-parts-supplier-for-the-tri-five-nationals/?=email-hero"><img class="hero" src="assets/img/BelaNewsImg1b.jpg" /></a>
-  </columns>
+    <columns small="12" large="12" class="img-wrap">
+      <spacer size="5"></spacer>
+      <a href="http://edrinkeperformance.com?=email-hero"><img class="logo text-center" src="assets/img/Hero.jpg"/></a>
+
+      <a href="http://edrinkeperformance.com?=email-hero"><img class="hero" src="assets/img/SpecialsHeader.jpg" /></a>
+    </columns>
   </row>
 
   <row>
-    <columns small="12" large="6" class="module-full">
-      <h5 class="header first">Tri-Five Nationals</h5>
-      <h6 class="subheader">August 12-13, 2016</h6>
-      <h5 class="header">Beech Bend Raceway</h5>
-      <h5 class="header">Bowling Green, KY</h5>
+    <columns small="12" large="6" class="img-wrap">
+      <a href="http://edrinkeperformance.com/camaro-1le-track-pack-street-v8-camaro/23123397?=email-linkout"><img class="text-center" src="assets/img/Cam1LETrackPk.jpg"></a>
+    </columns>
+    <columns small="12" large="6" class="img-wrap">
+      <a href="http://edrinkeperformance.com/ram-jet-350-intake-manifold/12489371?=email-linkout"><img class="text-center" src="assets/img/350Intake.jpg"></a>
     </columns>
   </row>
+  <row>
+    <columns small="12" large="6" class="img-wrap">
+      <a href="http://edrinkeperformance.com/ls7-forged-steel-crankshaft-forged-4-stroke-crankshaft/12611649?=email-linkout"><img class="text-center" src="assets/img/LS7CrankShaft.jpg"></a>
+    </columns>
+    <columns small="12" large="6" class="img-wrap">
+      <a href="http://edrinkeperformance.com/serpentine-accessory-drive-belt-system-with-air-conditioning/19172805?=email-linkout"><img class="text-center" src="assets/img/DriveBeltSys.jpg"></a>
+    </columns>
+  </row>
+  <row>
+    <columns small="12" large="12" class="img-wrap">
+      <a href="http://edrinkeperformance.com/connect-cruise-ls3-6-2l-430hp-automatic-2wd/cpsls34l65e?=email-linkout"><img class="text-center" src="assets/img/FullWidthLS3ConnectCruise.jpg"></a>
+    </columns>
+  </row>
+
 
   <row class="">
     <columns small="12" large="12" class="padded">
 
 
       <h5>NEWS</h5>
-      <h3>The Official Chevrolet Performance Parts Supplier for the Tri-Five Nationals</h3>
+      <h3>Rich Rinke Wins at the Chevrolet Performance US Nationals</h3>
       <spacer size="15"></spacer>
-      <a href="http://blog.edrinkeperformance.com/ed-rinke-performance-the-official-chevrolet-performance-parts-supplier-for-the-tri-five-nationals?=email-event-hero"><img class="module text-center" src="assets/img/BelaNewsImg1.jpg" /></a>
+      <a href="http://blog.edrinkeperformance.com/rich-rinke-wins-at-the-chevrolet-performacne-us-nationals?=email-event-hero"><img class="module text-center" src="assets/img/blogPreviewImg.jpg" /></a>
       <spacer size="30"></spacer>
       <p>
-        Looking for a large car event to attend this summer? Into Chevrolet’s? How
-        about 1955-57 Chevy’s? We have the event for you!! The Tri-Five Nationals is
-        the largest gathering anywhere of 55′, 56′ and 57′ Chevrolet’s, taking place
-        August 12-13 at Beech Bend Raceway in Bowling Green, KY. <a href="http://blog.edrinkeperformance.com/ed-rinke-performance-the-official-chevrolet-performance-parts-supplier-for-the-tri-five-nationals?=email-event-readmore">Read More ...</a>
+        The Chevrolet Performance U.S. Nationals is the biggest drag race in the world, bar none. Each Labor Day Weekend, hundreds of professional and amateur racers merge towards the racing capital of the world, Indianapolis, IN. Lucas Oil Raceway Park plays host to the race each year with racing all week and into the weekend, with the finals taking place on Labor Day Monday. <a href="http://blog.edrinkeperformance.com/rich-rinke-wins-at-the-chevrolet-performacne-us-nationals?=email-event-readmore">Read More ...</a>
       </p>
     </columns>
   </row>
@@ -106,10 +120,11 @@ subject: Ed Rinke Performance
   <row class="collapse subfooter">
     <columns class="text-center" small="12" large="6">
         <p class="text-center">
+          <a class="footer-link" href="*|UNSUB|*" >Unsubscribe</a> |
           <a class="footer-link" href="*|FORWARD|*" >Forward</a> |
           <a class="footer-link" href="*|UPDATE_PROFILE|" >Privacy</a> |
             *|LIST:DESCRIPTION|*<br>
-            *|LIST:COMPANY|* | *|LIST:ADDRESS|*
+            *|LIST:COMPANY|* | *|LIST:ADDRESS|*<br>
           </p>
     </columns>
   </row>
