updated for may

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,11 +27,32 @@ subject: Ed Rinke Performance
       <spacer size="5"></spacer>
       <a href="http://edrinkeperformance.com?=email-hero"><img class="logo text-center" src="assets/img/Hero.jpg"/></a>
 
-      <a href="http://edrinkeperformance.com?=email-hero"><img class="hero" src="assets/img/SpecialsHeader.jpg" /></a>
+    </columns>
+  </row>
+
+  <row class="">
+    <columns small="12" large="12" class="padded">
+
+      <h3>YOU WANT IT. WE HAVE IT.</h3>
+      <spacer size="15"></spacer>
+      <p><span><strong id="docs-internal-guid-647b5620-ca36-e7e4-7dab-bea3eec4ae2f">If you&rsquo;ve been eyeballing the 776 horsepower Chevrolet Performance <a href="http://www.chevrolet.com/performance/crate-engines/lsx-454-r.html">LSX454R</a>&nbsp;for your project vehicle, now&rsquo;s your time to buy. Ed Rinke Performance Parts is proud to offer Chevrolet Performance&rsquo;s most powerful engine ever, the LSX454R, is now being offered with a <a href="http://www.chevrolet.com/content/dam/Chevrolet/northamerica/usa/nscwebsite/en/Home/Vehicles/Performance/Currrent_offers/02_pdfs/2017_LSX454R_Offer_66027_Rebate_Form_FINAL.pdf">$1000 mail-in rebate</a>*.</strong></span></p>
+
+<p><br />
+<span><strong id="docs-internal-guid-647b5620-ca36-e7e4-7dab-bea3eec4ae2f">For all of the need-to-know information about the engine, head over to our blog and be sure to take advantage of this awesome opportunity for a $1,000 mail-in rebate (debit card) on the LSX454R. For the mail-in rebate form, click <a href="http://www.chevrolet.com/content/dam/Chevrolet/northamerica/usa/nscwebsite/en/Home/Vehicles/Performance/Currrent_offers/02_pdfs/2017_LSX454R_Offer_66027_Rebate_Form_FINAL.pdf">HERE</a>&nbsp;and to submit the rebate online, click <a href="https://mycertifiedservicerebates.com/#/">HERE</a>.</strong></span></p>
     </columns>
   </row>
 
   <row>
+    <columns small="12" large="12" class="img-wrap">
+
+
+    <img class="hero" src="assets/img/SpecialsHeader.jpg" />
+    </columns>
+  </row>
+
+
+  <row>
+
     <columns small="12" large="6" class="img-wrap">
       <a href="http://edrinkeperformance.com/camaro-1le-track-pack-street-v8-camaro/23123397?=email-linkout"><img class="text-center" src="assets/img/Cam1LETrackPk.jpg"></a>
     </columns>
@@ -54,7 +75,7 @@ subject: Ed Rinke Performance
   </row>
 
 
-  <row class="">
+  <!-- <row class="">
     <columns small="12" large="12" class="padded">
 
 
@@ -67,7 +88,7 @@ subject: Ed Rinke Performance
         The Chevrolet Performance U.S. Nationals is the biggest drag race in the world, bar none. Each Labor Day Weekend, hundreds of professional and amateur racers merge towards the racing capital of the world, Indianapolis, IN. Lucas Oil Raceway Park plays host to the race each year with racing all week and into the weekend, with the finals taking place on Labor Day Monday. <a href="http://blog.edrinkeperformance.com/rich-rinke-wins-at-the-chevrolet-performacne-us-nationals?=email-event-readmore">Read More ...</a>
       </p>
     </columns>
-  </row>
+  </row> -->
   <row>
     <columns small="12" large="6" class="module-left">
       <a href="http://edrinkeperformance.com/engines?=email-engines-button"><img class="module text-center" src="assets/img/EnginesButton.png" /></a>
